# smart_screen

./: .gitmodules  CMakeLists.txt  INSTALL.txt  README.txt
blued_converter/: CMakeLists.txt
blued_converter/src/: BluedHdf5Converter.cpp  main.cpp
common/: CMakeLists.txt
common/src/: Logger.cpp  Logger.h
data_analyzer/: CMakeLists.txt
data_analyzer/src/: ClassificationConfig.h  DataClassifier.h  EventFeatures.h  EventLabelManager.h  FeatureExtractor.h  SerializeEventLabelManager.h
data_loader/: CMakeLists.txt
data_loader/src/: AsyncDataQueue.h  BluedDataPoint.h  BluedDefinitions.h  BluedHdf5InputSource.cpp  BluedHdf5InputSource.h  BluedInputSource.cpp  BluedInputSource.h  DefaultDataPoint.h  DynamicStreamMetaData.cpp  DynamicStreamMetaData.h  Hdf5Mutex.cpp  Hdf5Mutex.h  PowerMetaData.cpp  PowerMetaData.h  ProgramConfiguration.cpp  ProgramConfiguration.h
docs/: CMakeLists.txt  Doxyfile.in  component overview.dia~
docs/additional-pages/: mainpage.dox
docs/diagrams/: component-overview.dia
event_detector/: CMakeLists.txt
event_detector/src/: DataStreamDistributor.h  DataStreamTypes.h  DataStreamWorker.h  Event.h  EventDetector.h  EventMetaData.h  EventStorage.h  Hdf5EventStorage.h  Hdf5Serializations.h
experiments/: CMakeLists.txt
experiments/data_vis/: CrossValidationStats.h  main.cpp
experiments/event_classification_setup/: SelectPartitions.h  main.cpp  slimmed_validation.cpp
experiments/simple_setup/: main.cpp
libanalyze/: CMakeLists.txt
libanalyze/src/: Algorithms.h  FastFourierTransformCalculator.h
nofare_app/: CMakeLists.txt
nofare_app/src/client/: main.cpp
nofare_app/src/common/: AddLabelCommand.cpp  AddLabelCommand.h  ReclassifyCommand.cpp  ReclassifyCommand.h  ShutdownCommand.cpp  ShutdownCommand.h  nofare_definitions.h
nofare_app/src/server/: CLIConnection.cpp  CLIConnection.h  EventHandlers.cpp  EventHandlers.h  Init.cpp  Init.h  InputSource.cpp  InputSource.h  ModelSerialization.cpp  ModelSerialization.hpp  NoFaReAppConfig.h  main.cpp
nofare_app_c_interface/: CMakeLists.txt
nofare_app_c_interface/src/: NofareCInterface.cpp  NofareCInterface.h
scripts/: add_random_labels.sh  build.sh  build_with_clang.sh
smart_app/: CMakeLists.txt
smart_app/src/: MetricProvider.h  SmartApp.h  dummy_funtion.cpp  dummy_funtion.h
test/: CMakeLists.txt
test/src/: data_storage_test.cpp  data_stream_generators.h  event_detection_test.cpp  smart_app_test.cpp  stream_distributer_test.cpp
working_directory/: config.ini.example
